# cgfx_lab3

./: CMakeLists.txt  cgfx_lab3.cpp
